# s

./: .gitignore  CLAUDE.md  Cargo.toml  README-ja.md  README-zh_CN.md  README.md  TESTING.md
.claude/skills/release/: SKILL.md
.claude/skills/screenpipe-api/: SKILL.md
.claude/skills/screenpipe-cli/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: e2e-test.yml  gitleaks.yml  privacy-filter-release.yml  release-app.yml  release-browser-extension.yml  release-cli.yml  release-enterprise.yml  release-mcp.yml  release-vietdamien.yml  sync-skills.yml
apps/screenpipe-app-tauri/app/: error.tsx  globals.css
apps/screenpipe-app-tauri/components/: app-sidebar.tsx  browser-sidebar.tsx  chat-sidebar.tsx  deeplink-handler.tsx  notification-handler.tsx  pipe-store.tsx  standalone-chat.tsx
apps/screenpipe-app-tauri/e2e/: README.md
apps/screenpipe-app-tauri/lib/: api.ts  chat-storage.ts  chat-utils.ts
apps/screenpipe-app-tauri/src-tauri/: Cargo.toml  build.rs  sign-ssl.ps1  tauri.enterprise.conf.json
crates/screenpipe-a11y/src/: activity_feed.rs  config.rs  events.rs
crates/screenpipe-a11y/tests/: e2e_obsidian.rs
crates/screenpipe-audio/: Cargo.toml
crates/screenpipe-audio/src/: lib.rs
crates/screenpipe-audio/tests/: core_tests.rs
crates/screenpipe-connect/: Cargo.toml
crates/screenpipe-connect/screenpipe-mcp/: package.json
crates/screenpipe-connect/src/: mdns.rs  oauth.rs
crates/screenpipe-connect/src/connections/: airtable.rs  asana.rs  bitrix24.rs  brex.rs  calcom.rs  calendly.rs  clickup.rs  confluence.rs  discord.rs  email.rs  financialsense.rs  fireflies.rs  github_issues.rs  glean.rs  gmail.rs  google_calendar.rs  google_docs.rs  google_sheets.rs  granola.rs  hubspot.rs  intercom.rs  jira.rs  lexi.rs  limitless.rs  linear.rs  logseq.rs  loops.rs  make.rs  microsoft365.rs  mod.rs  monday.rs  n8n.rs  notion.rs  ntfy.rs  obsidian.rs  otter.rs  perplexity.rs  pipedrive.rs  pocket.rs  pushover.rs  (+16 more)
crates/screenpipe-connect/src/connections/browser/: bridge.rs  mod.rs  owned.rs  user.rs
crates/screenpipe-connect/src/whatsapp/: mod.rs
crates/screenpipe-core/: Cargo.toml
crates/screenpipe-engine/: Cargo.toml
crates/screenpipe-secrets/: Cargo.toml
crates/screenpipe-secrets/src/: keychain.rs  lib.rs  migration.rs  state.rs  store.rs
(+220 files in other folders)
