[package]
name = "screenpipe-connect"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
image = { workspace = true }
reqwest = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
anyhow = "1.0"
screenpipe-core = { path = "../screenpipe-core" }
screenpipe-secrets = { path = "../screenpipe-secrets" }
tracing = { workspace = true }
russh = { version = "0.57", default-features = false, features = ["ring", "flate2", "rsa"] }
russh-sftp = "2.1"
dirs = "6"
chrono = "0.4"
async-trait = "0.1"
once_cell = "1"
uuid = { version = "1.5.0", features = ["v4"] }
thiserror = "1"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder"] }
mdns-sd = "0.13"

[dev-dependencies]
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }

[target.'cfg(target_os = "macos")'.dependencies]
eventkit-rs = "0.1"
objc2 = "0.6"
objc2-event-kit = "0.3"
objc2-foundation = "0.3"
chrono = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "ApplicationModel_Appointments",
    "Foundation",
    "Foundation_Collections",
] }
chrono = "0.4"
